# rustify

./: .gitignore  Cargo.toml  pyproject.toml
.clone/worktrees/practical-lalande/examples/: play.rs
.github/workflows/: ci.yml
.superpowers/brainstorm/24372-1775587467/content/: layout-options.html
.superpowers/brainstorm/24372-1775587467/state/: events  server-stopped
bindings/python/: Cargo.toml
bindings/python/rustify/: __init__.py
bindings/python/src/: client.rs  lib.rs
crates/rustify-core/: Cargo.toml
crates/rustify-core/src/: art.rs  error.rs  lib.rs  lyrics.rs  metadata.rs  mixer.rs  player.rs  playlist.rs  scanner.rs  tracklist.rs  types.rs
crates/rustify-mpris/: Cargo.toml
crates/rustify-mpris/src/: lib.rs
crates/rustify-tui/: Cargo.toml
crates/rustify-tui/src/: app.rs  config.rs  event.rs  library.rs  main.rs  scrobble.rs  theme.rs
crates/rustify-tui/src/ui/: main_panel.rs  mod.rs  now_playing.rs  sidebar.rs  visualizer.rs
docs/: TUI.md
docs/specs/: 2026-04-07-rustify-embedded-player-design.md
docs/superpowers/plans/: 2026-04-07-rustify-core.md  2026-04-08-rustify-tui.md  2026-04-08-tier1-playback-essentials.md  2026-04-09-tier2-rich-experience.md
docs/superpowers/specs/: 2026-04-08-rustify-tui-design.md  2026-04-08-tier1-playback-essentials-design.md  2026-04-09-tier2-rich-experience-design.md  2026-04-09-tier3-power-user-design.md
rules/: CLAUDE.md  DEVELOPMENT.md
